--- a/src/components/find/Find.module.css
+++ b/src/components/find/Find.module.css
@@ -19,12 +19,15 @@
   max-width: 650px;
   margin: auto;
   position: absolute;
+  margin-left: auto;
+  margin-right: auto;
   left: 0;
   right: 0;
 }
 
 .text_bg p {
   font-size: 1.4rem;
+  font-weight: 600;
   margin-top: -0.6rem;
 }
 
@@ -44,4 +47,32 @@
   border-top-right-radius: 1rem;
   height: 200px;
   object-fit: cover;
+}
+
+.card p {
+  text-align: center;
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+
+@media screen and (max-width: 500px) {
+  .card {
+    width: 100%;
+  }
+}
+
+.swiper-container {
+  width: 480px;
+}
+
+@media screen and (min-width: 640px) {
+  .swiper-container {
+    width: 640px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-container {
+    width: 768px;
+  }
 }
