--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -9,10 +9,13 @@
   height: 100%;
   margin: auto;
   padding: 1rem;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.container img {
+  height: 3rem;
 }
 
 .footer button {
