--- a/src/components/find/Find.module.css
+++ b/src/components/find/Find.module.css
@@ -51,8 +51,9 @@
 
 .card p {
   text-align: center;
+  font-weight: bold;
   padding: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 @media screen and (max-width: 500px) {
